--- a/app/docker-compose.yml
+++ b/app/docker-compose.yml
@@ -1,17 +1,7 @@
 # For more information: https://laravel.com/docs/sail
 version: '3'
 services:
-    nginx:
-        image: nginx:latest
-        volumes:
-            - ./:/var/www
-            - ./_docker/nginx/conf.d:/etc/nginx/conf.d
-        ports:
-            - 8079:80
-        depends_on:
-            - app
-        container_name: lusine_nginx
-    app:
+    laravel.test:
         build:
             context: ./vendor/laravel/sail/runtimes/8.1
             dockerfile: Dockerfile
@@ -38,7 +28,6 @@ services:
             - meilisearch
             - mailhog
             - selenium
-        container_name: lusine_app
     mysql:
         image: 'mysql/mysql-server:8.0'
         ports:
@@ -59,7 +48,6 @@ services:
             test: ["CMD", "mysqladmin", "ping", "-p${DB_PASSWORD}"]
             retries: 3
             timeout: 5s
-        container_name: lusine_db
     redis:
         image: 'redis:alpine'
         ports:
@@ -72,7 +60,6 @@ services:
             test: ["CMD", "redis-cli", "ping"]
             retries: 3
             timeout: 5s
-        container_name: lusine_redis
     meilisearch:
         image: 'getmeili/meilisearch:latest'
         ports:
@@ -85,7 +72,6 @@ services:
             test: ["CMD", "wget", "--no-verbose", "--spider",  "http://localhost:7700/health"]
             retries: 3
             timeout: 5s
-        container_name: lusine_meilisearch
     mailhog:
         image: 'mailhog/mailhog:latest'
         ports:
@@ -93,14 +79,12 @@ services:
             - '${FORWARD_MAILHOG_DASHBOARD_PORT:-8025}:8025'
         networks:
             - sail
-        container_name: lusine_mailhog
     selenium:
         image: 'selenium/standalone-chrome'
         volumes:
             - '/dev/shm:/dev/shm'
         networks:
             - sail
-        container_name: lusine_selenium
 networks:
     sail:
         driver: bridge
